--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,161 +1,406 @@
- *{
-    margin:0;
-    padding:0;
+ * {
+     margin: 0;
+     padding: 0;
 
-    font-family: Klukva;
-    src:url(../fonts/Klukva_version_01.otf);
+     font-family: Klukva;
+
+ }
+
+ div.main::-webkit-scrollbar,
+ div.footer::-webkit-scrollbar,
+ html::-webkit-scrollbar {
+     width: 0px;
+ }
+
+
+ .main_block {
+     left: 0%;
+     width: 100%;
+     font-size: 150%;
+
+
+     background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%,
+             rgba(252, 70, 107, 0.667) 100%);
+
+ }
+
+ body {
+     background: rgb(63, 94, 251);
+     background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%,
+             rgba(252, 70, 107, 0.667) 100%);
+ }
+
+ /* стили для галереи*/
+ .rus {
+     margin: auto;
+     padding-left: 30%;
+     padding-top: 2%;
+     text-transform: uppercase;
+ }
+
+
+ .gal_img {
+     border-radius: 8px;
+     width: 290px;
+
+     transition-property: width, border-radius;
+     transition-duration: .3s;
+ }
+/*
+ .gal_img:hover {
+     border-radius: 30%;
+     width: 320px;
+     height: 220px;
+ } */
+
+ .photo {
+
+     padding-left: 4%;
+     margin-bottom: 2%;
+ }
+
+ td {
+     padding: 10px;
+ }
+
+ .photo1 {
+
+     margin-left: 15%;
+     margin-bottom: 2%;
+ }
+
+ .photo {
+     border-width: 5px;
+     border-color: black;
+
+     display: inline-block;
+     /*Строчно-блочный элемент*/
+     position: relative;
+     /*Относительное позиционирование*/
+ }
+
+ .photo:hover::after {
+     margin-bottom: 20px;
+     margin-left: 15%;
+     width: 95.65%;
+
+     content: attr(data-title);
+     /* Выводим текст */
+     position: absolute;
+     /* Абсолютное позиционирование */
+     left: 0;
+     right: 0;
+     bottom: 0px;
+     /* Положение подсказки */
+     z-index: 1;
+     /* Отображаем подсказку поверх других элементов */
+     background: rgba(128, 128, 128, 0.5);
+     /* Полупрозрачный цвет фона */
+     color: #090909;
+     /* Цвет текста */
+     text-align: center;
+     /* Выравнивание текста по центру */
+     font-family: sans-serif;
+     /* Гарнитура шрифта */
+
+     font-size: 15px;
+     /* Размер текста подсказки */
+     padding: 5px 15px;
+     /* Поля */
+     border-radius: 0px 0px 3px 3px;
+ }
+
+
+ img.photo-2:hover {
+
+     box-shadow: 10px 5px 5px rgba(68, 36, 81, 0.474);
+ }
+
+ .text {
+
+     padding: 2%;
+     margin: 0 2% 0 2%;
+
+     word-break: normal;
+     width: 50%;
+     margin-left: 8%;
+ }
+
+ aside[class^=sidebar] {
+     font-size: 140%;
+     padding: 5% 8% 30% 5%;
+     right: 0%;
+     position: fixed;
+
+ }
+
+
+ .flex-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 5%;
 }
 
-.main_block{
-    left: 0%;
-    width: 100%;
-    font-size:150%; 
-    
-    background: rgb(63,94,251);
-    background: radial-gradient(circle, rgba(63,94,251,1) 0%,
-     rgba(252,70,107,0.667) 100%);
-
-}
-
-.photo1{
-    width: 60%;
-    height: inherit;
+.flex-navigation {
+    flex: 2;
+    display: flex;
+    justify-content: space-around;
     align-items: center;
-    margin-left:4%;
-    margin-bottom: 2%;
+    padding: 10px;
+    margin: 0 auto;
+    
+
+    height: 150px;
+    width: fit-content;
+     font-size: 125%;
+}
+
+.flex-main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 10px;
+    
+}
+.flex-text {
+    display: flex;
+     order: 1;
+}
+
+.flex-image {
+    display: flex;
+     order: 2;
+}
+
+.gal_img {
+    
     border-radius: 4px;
-
+    padding: 5px;
+    transition: transform 0.5s;
 }
 
-.photo{
-
-    border-width: 5px;
-    border-color: black;
-
-    /* width: 350px; */
-    display: inline-block; /*Строчно-блочный элемент*/
-    position: relative; /*Относительное позиционирование*/
-    
+.gal_img:hover {
+    transform: scale(1.5);
+    border-radius: 15%;
 }
 
-.photo:hover::after {
-    margin-bottom: 25px;
-    margin-left: 40px;
-    width: 570px;
-    content: attr(data-title); /* Выводим текст */
-    position: absolute; /* Абсолютное позиционирование */
-    left: 0; right: 0; bottom: 0px; /* Положение подсказки */
-    z-index: 1; /* Отображаем подсказку поверх других элементов */
-    background: rgba(128,128,128,0.5); /* Полупрозрачный цвет фона */
-    color: #090909; /* Цвет текста */
-    text-align: center; /* Выравнивание текста по центру */
-    font-family: sans-serif; /* Гарнитура шрифта */
 
-    
-    font-size: 15px; /* Размер текста подсказки */
-    padding: 5px 15px; /* Поля */
-    border-radius: 0px 0px 4px 4px;
-}
+ /* div[class^=flex-img] {flex-flow: column wrap-reverse;} */
 
-.text{
-    padding: 2%;
-    margin: 0 2% 0 2%;
+ img[class^=photo] {
+     margin: 0% 0 2% 25%;
+     border-radius: 3px;
+ }
 
-}
-
-.sidebar{
-    height: 100%;
-
-    margin-left: 0%;
-    margin-bottom: 20px;
-    margin-right: 0;
-    padding: 2% 5% 30% 5%;
-   
-    float: right;
-}
-
-.button{
-    margin-bottom: 2%;
-    margin-right: 2%;
-    
-    padding: 1%;
-
-    float: right;
-}
-
-.headerr{
-    text-align: left;
-    margin-left: 5%;
-    padding: 1%;
-}
-
-.ul{
-
-    list-style-image: url(file40156.jpg); 
-}
-
-.button1{
-    float: left;
-    margin-left: 1%;
-}
-
-.button2{
-    float: right;
-    margin-right: 1%;
-}
-
-.dropdown{
-    margin-bottom: 50%;
-    position: relative;
-    display: inline-block;
-}
-
-.dropbtn{
-    background-color:#8b538582 ;
-    color:azure;
-    padding: 16px;
-    font-size: 22px;
-    border: none;
-}
-
-.dropdown-content{
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 100%;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a{
-    text-align: center;
-    color:black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-    
-
-.dropdown:hover .dropbtn {background-color: #68336c;}
+ /* Стили для Главной*/
+ img[class^=sphoto] {
+     /*margin: 10%;*/
+     margin: 0% 0 2% 15%;
+     border-radius: 3px;
+ }
 
 
-.left, .right {
-    padding-top: 15%;
-    min-width: 50%;
-    align-items: center;
-    text-align: center;
-    display: block;
-    margin: 10px;
-    padding: 5px 10px;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
+ .event {
+     font-size: 150%;
+     margin-left: 2%;
+     padding: 5%;
+     display: inline;
+     text-align: center;
+ }
 
-.left a, .right a{
-    text-decoration: none;
-}
+ .description {
+     text-overflow: ellipsis;
+     width: 60%;
+     padding: 3%;
+     padding-top: 1%;
+ }
+
+ .description1 {
+     text-overflow: ellipsis;
+     width: 60%;
+     padding: 3%;
+     padding-top: 1%;
+     color: aliceblue;
+ }
+
+ .headerr {
+     width: 50%;
+     text-align: center;
+     margin-left: 5%;
+     padding: 1%;
+ }
+
+ .dropdown {
+     margin-bottom: 0%;
+     position: relative;
+     display: inline-block;
+ }
+
+ .dropbtn {
+     background-color: #8b538582;
+     color: azure;
+     padding: 16px;
+     font-size: 100%;
+     border: none;
+ }
+
+ .dropdown-content {
+     display: none;
+     position: absolute;
+     background-color: #f1f1f1;
+     min-width: 100%;
+     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+     z-index: 1;
+ }
+
+ .dropdown-content a {
+     text-align: center;
+     color: black;
+     padding: 12px 16px;
+     text-decoration: none;
+     display: block;
+ }
+
+ .dropdown:hover .dropdown-content {
+     display: block;
+ }
+
+ .dropdown:hover .dropbtn {
+     background-color: #68336c;
+ }
+
+ .dropdown:hover .navigate {
+     transform: translate3d(-25vh, -10vh, 0px);
+ }
+
+ .navigate {
+     transition-property: transform;
+     transition-duration: .6s;
+ }
+
+ .left,
+ .right {
+     padding-top: 15%;
+     min-width: 50%;
+     align-items: center;
+     text-align: center;
+     display: block;
+     margin: 10px;
+     padding: 5px 10px;
+     background-color: #f0f0f0;
+     border: 1px solid #ccc;
+     border-radius: 5px;
+ }
+
+
+ .left a,
+ .right a {
+     text-decoration: none;
+     display: block;
+ }
+
+
+ /* Контейнер подсказок */
+ .tooltip {
+     top: 2%;
+     margin-left: 25%;
+     position: relative;
+     display: inline-block;
+     border-bottom: 1px dotted black;
+     /* Если вы хотите, чтобы точки под перемещаемым текстом */
+ }
+
+ /* Текст подсказки */
+ .tooltip .tooltiptext {
+     visibility: hidden;
+     width: 300px;
+     background-color: rgba(0, 0, 0, 0.6);
+     color: #fff;
+     text-align: center;
+     padding: 5px 0;
+     border-radius: 6px;
+
+     /* Расположение текста подсказки */
+     position: absolute;
+     z-index: 1;
+     top: 125%;
+     left: 20%;
+     margin-left: -60px;
+
+     /* Исчезают в подсказке */
+     opacity: 0;
+     transition: opacity 0.3s;
+ }
+
+ /* Подсказка стрелка */
+ .tooltip .tooltiptext::after {
+     content: "";
+     position: absolute;
+     bottom: 100%;
+     left: 50%;
+     margin-left: -5px;
+     border-width: 5px;
+     border-style: solid;
+     border-color: #131313 transparent transparent transparent;
+     transform: rotate(180deg);
+ }
+
+ /* Отображение текста подсказки при наведении курсора мыши на контейнер подсказки */
+ .tooltip:hover .tooltiptext {
+     visibility: visible;
+     opacity: 1;
+ }
+
+ .flag {
+     width: 500px;
+     height: 100px;
+     transition-duration: 7s;
+     transition-property: transform;
+     position: absolute;
+     display: inline-block;
+     align-items: center;
+     bottom: -200px;
+     left: 50px;
+
+ }
+
+ .flag img {
+     height: 100px;
+ }
+
+ body:hover .flag {
+     transform: translate(900px, 0px);
+ }
+
+ .flag-1 {
+     transition-timing-function: ease;
+ }
+
+
+ @media screen and (width: 400px) {
+     header {
+         padding: 10px;
+     }
+
+     /* body {
+        padding: 10px;
+    } */
+
+     .dropdown:hover .navigate {
+         transform: translate3d(-5vh, -1vh, 0px);
+     }
+
+     .rus {
+         text-decoration-line: line-through;
+     }
+
+     aside {
+         size: 50%;
+     }
+
+     img[class^=photo] {
+         width: 200px;
+         height: 100px;
+     }
+ }
