--- a/CSS/style_gallery.css
+++ b/CSS/style_gallery.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
 
-    
+    font-family: Klukva;
+    src:url(../fonts/Klukva_version_01.otf);
 }
 
 div.main::-webkit-scrollbar,
@@ -25,15 +26,13 @@ body{
     text-transform: uppercase;
 }
 
-.rus + .button{
-    display: inline;
-}
+
 
 .gal_img{
     border-radius: 8px;
     width: 290px;
     
-    transition-property: width, border-radius;
+    transition-property: width, height, border-radius;
     transition-duration: .3s;
 }
 
@@ -43,55 +42,90 @@ body{
     height: 220px;
 }
 
-
-.menu1{
-    float: left;
-    margin-left: 1%;
-
-}
-
-.menu2{
-    float: right;
-    margin-right: 1%;
-}
-
 .photo{
     box-shadow: 10px 5px 5px red;
     padding-left:4%;
     margin-bottom: 2%;
 }
 
-.button{
+aside.sidebar{
+
+    float: right;
 
     height: 50%;
 
+    font-size: 125%;
+
+    /* margin-top: 50px; */
+
     margin-left: 0%;
     margin-bottom: 15%;
-    margin-right: 5%;
-    padding: 2% 5% 30% 5%;
-   
-    float: right;
-    /* background-color: bisque; */
-    
-    /* padding: 30%;
-    padding-right:50px;
+    margin-right: 20px;
+    padding: 1% 5% 40% 5%;
 
-    float: right;
-
-    background-color: antiquewhite;
-
-    border: 2px double black; */
-    
 }
 
 a{
     text-decoration: none;
 }
 
-.navi{
-    list-style-image: url(../img/gerb\ —\ копия.jpg);
-}
-
 td{
     padding:10px;
+}
+
+
+.dropdown{
+    margin-bottom: 50%;
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn{
+    background-color:#8b538582 ;
+    color:azure;
+    padding: 16px;
+    font-size: 22px;
+    border: none;
+}
+
+.dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 100%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a{
+    text-align: center;
+    color:black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+    
+
+.dropdown:hover .dropbtn {background-color: #68336c;}
+
+
+.left, .right {
+    padding-top: 15%;
+    min-width: 50%;
+    align-items: center;
+    text-align: center;
+    display: block;
+    margin: 10px;
+    padding: 5px 10px;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.left a, .right a{
+    text-decoration: none;
 }
